manifests/showks-canvas-jyoshise/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-jyoshise
  namespace: showks
  labels:
    app: showks-canvas-jyoshise
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-jyoshise

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-jyoshise
  namespace: showks
  labels:
    app: showks-canvas-jyoshise
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-jyoshise
  template:
    metadata:
      labels:
        app: showks-canvas-jyoshise
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-jyoshise
          image: containerdaysjp/showks-canvas-jyoshise:prod-a34ca1691b731701141b3f6634799cb4e9abd6e3
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-jyoshise
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: showks-canvas-jyoshise.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jyoshise
          servicePort: 8080
  - host: showks-canvas-jyoshise.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jyoshise
          servicePort: 8080
